[package]
name = "healthcheck-service"
version = "0.1.0"
edition = "2024"
keywords = ["opentelemetry", "prometheus", "metrics", "async"]
license = "Apache-2.0 OR MIT"
description = "A healthcheck service"
repository = "https://github.com/houseme/healthcheck-service"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44", features = ["full"] }
opentelemetry = { version = "0.29" }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "gzip-tonic"] }
opentelemetry-prometheus = "0.29"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.19"
sysinfo = "0.30"
once_cell = "1.21.1"

[dev-dependencies]
opentelemetry-semantic-conventions = { version = "0.29" }
http-body-util = { version = "0.1" }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }